--- a/configs/datasets/coco.yaml
+++ b/configs/datasets/coco.yaml
@@ -1,1 +1,9 @@
-
+DATASET:
+  NAME: "episodic_coco"
+  ROOT: "/data/zhangfeng/data/cv/episode/strict_split/COCO"
+  VAL_SPLIT: "val"
+  TEST_SPLIT: "test"
+  TRAIN_SPLIT: "train"
+  VAL_CLASS: 12
+  TEST_CLASS: 16
+  TRAIN_CLASS: 16
